assets/css/styles.css
html{
  margin: 0;
}
#try img{
  width: 100px;
  height: 50px;
}
div.brand{
  width: 100px;
}
.skills{
    display: inline-block;
    max-width:50%; /* limit width */
    word-break:break-all; /* wrap extended text*/
}
.img-circle{
  width: 200px;
  height: 200px;
  box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
  border:1px solid rgba(0, 0, 0, 0.2);
}



img.img-responsive{
  height: 100%;
  width: 100%;
}

.hovereffect {
width:100%;
height:100%;
float:left;
overflow:hidden;
position:relative;
text-align:center;
cursor:default;
}

.hovereffect .overlay {
width:100%;
height:100%;
position:absolute;
overflow:hidden;
top:0;
left:0;
opacity:0;
background-color:rgba(0,0,0,0.5);
-webkit-transition:all .4s ease-in-out;
transition:all .4s ease-in-out
}

.hovereffect img {
display:block;
position:relative;
-webkit-transition:all .4s linear;
transition:all .4s linear;
}

.hovereffect h2 {
text-transform:uppercase;
color:#fff;
text-align:center;
position:relative;
font-size:17px;
background:rgba(0,0,0,0.6);
-webkit-transform:translatey(-100px);
-ms-transform:translatey(-100px);
transform:translatey(-100px);
-webkit-transition:all .2s ease-in-out;
transition:all .2s ease-in-out;
padding:10px;
}

.hovereffect a.info {
text-decoration:none;
display:inline-block;
text-transform:uppercase;
color:#fff;
border:1px solid #fff;
background-color:transparent;
opacity:0;
filter:alpha(opacity=0);
-webkit-transition:all .2s ease-in-out;
transition:all .2s ease-in-out;
margin:50px 0 0;
padding:7px 14px;
}

.hovereffect a.info:hover {
box-shadow:0 0 5px #fff;
}

.hovereffect:hover img {
-ms-transform:scale(1.2);
-webkit-transform:scale(1.2);
transform:scale(1.2);
}

.hovereffect:hover .overlay {
opacity:1;
filter:alpha(opacity=100);
}

.hovereffect:hover h2,.hovereffect:hover a.info {
opacity:1;
filter:alpha(opacity=100);
-ms-transform:translatey(0);
-webkit-transform:translatey(0);
transform:translatey(0);
}

.hovereffect:hover a.info {
-webkit-transition-delay:.2s;
transition-delay:.2s;
}




#projects{
  margin-top: 0;
}
#initial{
  margin-right: 3em;
  font-family: 'Alex Brush', cursive;
  font-weight: bolder;
  font-size: 3em;
  padding-top: 15px;
  text-shadow: 2px 2px 5px #686868;

}

.lefft{
  margin-right: 40px;
}
.lefft a:hover{
  background-color: black;
}
.navbar-header div{
  margin-left: 2em;
}

#example{
  margin: 0 3em;
}

.navigation-btn{
  background-color: white;
}
#leftbut:hover{
  color: white;
  background-color: white;
  opacity: 1;
}
a span{
  color:black;
  /*text-shadow: 2px 2px 5px #686868;*/
  font-weight: bold;
}
.contact-top{
  font-size: 2em;
}
.header-text{
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;

}
.project-name{
  text-decoration: underline;
}
div.hovereffect{
     box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
}
#my-skills{
  background-color: rgb(106, 208, 122);
}
img.background-image{
  width: 100%;
}
.description{
  position: absolute;
  color: black;
  background-color: none;
  margin-top: 20%;
}

